# dyn-smooth-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  tan.rs  tests.rs
src/tests/: step_response.rs  tan_approx.rs
tools/: lut-tan-i32.py  simulation.py
